fix photos size

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
             <h3 onclick="toggleAnswer('answer1')" style="cursor: pointer; color: #007acc;">1. What are the main differences between Web1, Web2, and Web3? (Click to Show)</h3>
             <div id="answer1" style="display: none;">
                 <ul>
-                    <li><strong>Web1:</strong> Static websites with limited interaction. Users can only read information. No user-generated content.</li>
-                    <li><strong>Web2:</strong> Dynamic and interactive websites. Users can create content (like social media). Focuses on user participation.</li>
-                    <li><strong>Web3:</strong> Decentralized internet with blockchain technology. Users have control over their data. Smart contracts enable secure transactions.</li>
+                    <li><strong>Web1:</strong> Basic websites. You can only read information, not change it.</li>
+                    <li><strong>Web2:</strong> Interactive websites. You can share and create content, like on social media.</li>
+                    <li><strong>Web3:</strong> Websites use blockchain. You control your data. Secure deals with smart contracts.</li>
                 </ul>
             </div>
         </div>
