--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>Personal Website</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        body { font-family: Arial, sans-serif; background-color: #f4f4f9; margin: 0; padding: 0; }
+body { font-family: Arial, sans-serif; background-color: #f4f4f9; margin: 0; padding: 0; }
+        html { scroll-behavior: smooth; scroll-padding-top: 60px; }
         #menu { background-color: #00bfff; color: white; padding: 10px; display: flex; justify-content: center; position: fixed; width: 100%; top: 0; z-index: 10; }
         #menu ul { list-style: none; margin: 0; padding: 0; display: flex; gap: 20px; }
         #menu ul li { display: inline; }
@@ -12,10 +13,11 @@
         #menu ul li a:hover { text-decoration: underline; }
         section { margin-top: 100px; padding: 20px; background-color: white; margin-bottom: 20px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0,0,0,0.1); max-width: 800px; margin-left: auto; margin-right: auto; }
         h2 { color: #00bfff; border-bottom: 2px solid #00bfff; padding-bottom: 10px; margin-bottom: 20px; }
-        form { display: flex; flex-direction: column; gap: 10px; max-width: 400px; margin-top: 10px; }
-        input, textarea, select, button { padding: 10px; border: 1px solid #ccc; border-radius: 5px; }
-        button { background-color: #00bfff; color: white; border: none; cursor: pointer; }
-        button:hover { background-color: #007acc; }
+        .photo-gallery { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 70px; padding: 20px; align-items: center; background-color: #eef3f9; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); }
+        figure { display: flex; flex-direction: column; align-items: center; text-align: center; margin: 0; transition: transform 0.3s, box-shadow 0.3s; }
+        figure:hover { transform: scale(1.1); box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); }
+        .photo { width: 100%; height: 180px; max-width: 250px; border-radius: 10px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); transition: box-shadow 0.3s; object-fit: cover; }
+        figcaption { margin-top: 8px; font-size: 0.95em; color: #444; }
     </style>
 </head>
 <body>
