--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div>
             <h3 onclick="toggleAnswer('answer2')" style="cursor: pointer; color: #007acc;">2. Example of a Use Case (Click to Show)</h3>
             <div id="answer2" style="display: none;">
-                <p>Search Query: "I wish there were drugs"</p>
+                <p>Search Query: "Side effects of drugs"</p>
                 <ul>
                     <li><strong>Web1:</strong> You find a static website with basic information about drugs. No interaction or user feedback.</li>
                     <li><strong>Web2:</strong> You find forums, blogs, or social media posts where users discuss and share information about drugs.</li>
